# backend

./: .env.sample  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.travis/: isort.sh  tests.sh
deinfoxication/: __init__.py  configs.py  endpoints.py  utils.py
deinfoxication/feed/: __init__.py  models.py  schemas.py  tasks.py
deinfoxication/views/: __init__.py  default.py
migrations/: env.py  script.py.mako
migrations/versions/: 17b448e0ac27_initial_revision.py  4213edb3ce5a_change_feed_and_article_to_adapt_the_.py
tests/: conftest.py  factories.py  test_dummy.py  test_index.py  test_tasks.py
tests/feed/: test_tasks.py
