[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "0.9.1"
celery = "4.0.2"
click = "6.7"
feedparser = "5.2.1"
Flask = "1.0"
Flask-Restless = "1.0.0b1"
Flask-SQLAlchemy = "2.2"
lxml = "*"
marshmallow = "2.13.4"
prettyconf = "1.2.3"
psycopg2 = "2.7.1"
pytz = "2017.2"
raven = {version = "6.0.0", extras = ["flask"]}
SQLAlchemy = "1.1.6"
flask_click_migrate = {git = "https://github.com/eatfirst/Flask-Click-Migrate.git", tag = "0.1.0"}

[tool.poetry.dev-dependencies]
faker = "*"
factory-boy = "*"
ipdb = "*"
ipython = "*"
pytest = "3.0.7"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
